syntax = "proto3";

option go_package = "./model";


message Deposit {
    string wallet_id = 1;
    float amount = 2;
  }
  
message DepositArray {
  string wallet_id = 1;
  repeated Deposit deposits = 2;
}

message DepositFlag {
  bool flagged = 1;
  float balanceAccumulation = 2;
  int64 depositStartTimestamp = 3;
}